Fix ease button alignment

--- a/qt/aqt/data/web/css/reviewer-bottom.scss
+++ b/qt/aqt/data/web/css/reviewer-bottom.scss
@@ -23,6 +23,13 @@ body {
     position: relative;
 }
 
+#middle {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;
+}
+
 button {
     min-width: 60px;
     white-space: nowrap;
@@ -75,6 +82,7 @@ button {
     border-top: 1px solid color(border);
     /* Better compatibility with graphics pad/touchscreen */
     -webkit-user-select: none;
+    position: relative;
 }
 
 .nightMode {
